# ABR1

./: Cargo.toml  LICENSE  README.md
src/: app.rs  database.rs  database_1.rs  lib.rs  main.rs  main_orig.rs  main_orig2.rs  pdf.rs  types.rs
src/components/: billing.rs  dashboard.rs  dashboard_1.rs  dashboard_2.rs  dashboard_3.rs  dashboard_4.rs  diffs.rs  diffsv1.rs  mod.rs  modal.rs  profile.rs  project_tasks.rs  project_tasks_1.rs  pt_check.rs  text_diff.rs  visual_diff.rs  web_diff.rs
src/js/: main.js
src/pages/: landing.rs  sign_in.rs
static/: index.html
